--- a/style.css
+++ b/style.css
@@ -114,6 +114,9 @@ body {
   transition: all 0.25s;
   animation: rotation 0.25s linear 3.5s 7 forwards;
 }
+
+
+
 .nav-pc-btn:hover {
   background-color: #2365df;
 }
@@ -187,6 +190,10 @@ button {
   letter-spacing: 1.2;
   word-spacing: -1.5vw;
   animation: pop 500ms linear 4s 1 both;
+}
+
+.pop{
+  animation: pop 500ms linear 4.2s 1 both;
 }
 
 .bigEmo {
