--- a/phnmenu.css
+++ b/phnmenu.css
@@ -2,7 +2,7 @@
   z-index: 8;
   inset: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: fixed;
   top: -100vh;
   background-color: white;
